# MatrixFinder

./: CMakeLists.txt  Waldo.kdev4
data/: data.txt
kernel/: find.cl
src/: CMakeLists.txt  main.cpp  matrixfinder.cpp  matrixfinder.h  test_main.cpp
